Bug 97816 - opengl - corrupted icon with 1bit mask in calc toolbar
Summary: opengl - corrupted icon with 1bit mask in calc toolbar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Meeks
URL:
Whiteboard: target:5.1.1
Keywords:
: 97760 98029 98069 (view as bug list)
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-02-12 20:13 UTC by Michael Meeks
Modified: 2016-10-25 19:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
picture of the goodness in action. (1.95 KB, image/png)
2016-02-12 20:15 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2016-02-12 20:13:46 UTC
Launch calc in opengl mode bingo =) (in 5.1.1rc1)
Comment 1 Michael Meeks 2016-02-12 20:15:56 UTC
Created attachment 122593 [details]
picture of the goodness in action.
Comment 2 Michael Meeks 2016-02-12 20:20:11 UTC
Fixed =) phew. That's why it worked on master.
Comment 3 Commit Notification 2016-02-12 20:22:17 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=baf7dd2db7f61b90c0d63db4326034d76bfe2300&h=libreoffice-5-1-1

tdf#97816 - vcl: opengl - clear the user buffer after greyscale conversion.

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-02-13 16:02:02 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ecadfaebf757838278e5351fb240b4bfc351ff08&h=libreoffice-5-1

tdf#97816 - vcl: opengl - clear the user buffer after greyscale conversion.

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 steve 2016-02-15 09:09:59 UTC
re-adding 5.1.2 whiteboard.
Comment 6 Michael Meeks 2016-02-16 10:31:04 UTC
Unfortunately this fix is not in RC1 of 5.1.1 but will be in RC2.
Comment 7 Buovjaga 2016-02-16 12:17:44 UTC
*** Bug 97760 has been marked as a duplicate of this bug. ***
Comment 8 Adolfo Jayme Barrientos 2016-02-22 05:18:56 UTC
*** Bug 98069 has been marked as a duplicate of this bug. ***
Comment 9 Ravi 2016-02-27 22:00:35 UTC
*** Bug 98029 has been marked as a duplicate of this bug. ***
Comment 10 Ravi 2016-02-27 22:08:33 UTC
I had the same issue of toolbar button icons being corrupted randomly in version 5.1.0.3 release. When OpenGL rendering is disabled from options, the issue goes away. Downloaded and installed the pre-release version 5.1.1.1 (Build id c43cb650e9c145b181321ea547d38296db70f36e) and the issue does not appear in this version, with or without OpenGL rendering active.