tdf#97816 - vcl: opengl - clear the user buffer after greyscale conversion.

Change-Id: Ie87fc935bf69b5eb2c620e60d041fb95b544ec96
Reviewed-on: https://gerrit.libreoffice.org/22243
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Tomaž Vajngerl <quikee@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/22329
Tested-by: Jenkins <ci@libreoffice.org>