vcl/opengl/salbmp.cxx
@@ -940,6 +940,10 @@ bool OpenGLSalBitmap::ConvertToGreyscale()
     mnBits = 8;
     maPalette = Bitmap::GetGreyPalette(256);
 
+    // AllocateUserData will handle the rest.
+    maUserBuffer.reset();
+    mbDirtyTexture = false;
+
     CHECK_GL_ERROR();
     return true;
 }
